--- a/src/index.html
+++ b/src/index.html
@@ -1,43 +1,45 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Where I wrote this code</title>
-        <meta name="author" content="Michele Dinelli" />
-        <meta
-            name="viewport"
-            content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
-        />
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <head>
+    <title>Where I wrote this code</title>
+    <meta name="author" content="Michele Dinelli" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+    />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-        <!-- Libraries -->
-        <script type="text/javascript" src="libs/webgl-utils.js" defer></script>
-        <script type="text/javascript" src="libs/m4.js" defer></script>
+    <!-- Libraries -->
+    <script type="text/javascript" src="libs/webgl-utils.js" defer></script>
+    <script type="text/javascript" src="libs/m4.js" defer></script>
+    <script type="text/javascript" src="libs/dat.gui.js" defer></script>
 
-        <!-- Custom code -->
-        <script type="text/javascript" src="utils/glUtils.js" defer></script>
+    <!-- Custom code -->
+    <script type="text/javascript" src="utils/glUtils.js" defer></script>
+    <script type="text/javascript" src="utils/keys.js" defer></script>
+    <script type="text/javascript" src="utils/gui.js" defer></script>
 
-        <!-- Entry point -->
-        <script type="text/javascript" src="index.js" defer></script>
-    </head>
+    <!-- Entry point -->
+    <script type="text/javascript" src="index.js" defer></script>
+  </head>
 
-    <body>
-        <style>
-            body {
-                margin: 0;
-                padding: 0;
-                overflow: hidden;
-            }
+  <body>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+      }
 
-            canvas {
-                border: 1px solid black;
-                height: 100vh;
-                width: 100vw;
-            }
-        </style>
+      canvas {
+        height: 100vh;
+        width: 100vw;
+      }
+    </style>
 
-        <canvas id="canvas" width="640" height="480">
-            Your browser doesn't appear to support the HTML5
-            <code>&lt;canvas&gt;</code> element.
-        </canvas>
-    </body>
+    <canvas id="canvas" width="640" height="480">
+      Your browser doesn't appear to support the HTML5
+      <code>&lt;canvas&gt;</code> element.
+    </canvas>
+  </body>
 </html>
