--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,15 @@
     <script type="text/javascript" src="libs/webgl-utils.js" defer></script>
     <script type="text/javascript" src="libs/m4.js" defer></script>
     <script type="text/javascript" src="libs/dat.gui.js" defer></script>
+    <script type="text/javascript" src="libs/jquery-3.6.0.js" defer></script>
+    <script type="text/javascript" src="libs/glm_utils.js" defer></script>
+    <script type="text/javascript" src="libs/mesh_utils.js" defer></script>
 
     <!-- Custom code -->
     <script type="text/javascript" src="utils/glUtils.js" defer></script>
     <script type="text/javascript" src="utils/keys.js" defer></script>
     <script type="text/javascript" src="utils/gui.js" defer></script>
+    <script type="text/javascript" src="utils/load_mesh.js" defer></script>
 
     <!-- Entry point -->
     <script type="text/javascript" src="index.js" defer></script>
