--- a/src/index.html
+++ b/src/index.html
@@ -32,16 +32,20 @@
       body {
         margin: 0;
         padding: 0;
+
+        height: 100vh;
+        width: 100vw;
+
         overflow: hidden;
       }
 
       canvas {
-        height: 100vh;
+        height: 100%;
         width: 100vw;
       }
     </style>
 
-    <canvas id="canvas" width="640" height="480">
+    <canvas id="canvas" width="500" height="500">
       Your browser doesn't appear to support the HTML5
       <code>&lt;canvas&gt;</code> element.
     </canvas>
