--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
     <!-- Libraries -->
-    <script type="text/javascript" src="libs/webgl-utils.js" defer></script>
+    <!-- <script type="text/javascript" src="libs/webgl-utils.js" defer></script> -->
+    <script
+      src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"
+      defer
+    ></script>
     <script type="text/javascript" src="libs/m4.js" defer></script>
     <script type="text/javascript" src="libs/dat.gui.js" defer></script>
     <script type="text/javascript" src="libs/jquery-3.6.0.js" defer></script>
@@ -21,7 +25,7 @@
     <script type="text/javascript" src="utils/glUtils.js" defer></script>
     <script type="text/javascript" src="utils/keys.js" defer></script>
     <script type="text/javascript" src="utils/gui.js" defer></script>
-    <script type="text/javascript" src="utils/load_mesh.js" defer></script>
+    <script type="text/javascript" src="utils/loader.js" defer></script>
 
     <!-- Entry point -->
     <script type="text/javascript" src="index.js" defer></script>
@@ -41,8 +45,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
-
-        background-color: #3b3b3b;
       }
 
       canvas {
