Add loading bar

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,9 @@
     <!-- Audio -->
     <script type="text/javascript" src="audio/audio.js" defer></script>
 
+    <!-- Loading bar -->
+    <script type="text/javascript" src="utils/loadingBar.js" defer></script>
+
     <!-- Entry point -->
     <script type="text/javascript" src="index.js" defer></script>
   </head>
@@ -52,5 +55,9 @@
       <div class="wave-animation"></div>
       <div class="play-icon"></div>
     </button>
+
+    <div id="loading">
+      <div id="loading-bar"></div>
+    </div>
   </body>
 </html>
