Update index.html meta title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Where I wrote this code</title>
+    <title>Where I wrote this</title>
     <meta name="author" content="Michele Dinelli" />
     <meta
       name="viewport"
