--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <!-- Styles -->
+    <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="style.css" />
 
     <!-- Libraries -->
