Self host webgl-utils.js library and update style.css for credits

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
 
     <!-- Libraries -->
-    <!-- <script type="text/javascript" src="libs/webgl-utils.js" defer></script> -->
-    <script
+    <!-- <script
       src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"
       defer
-    ></script>
+    ></script> -->
+    <script type="text/javascript" src="libs/webgl-utils.js" defer></script>
     <script type="text/javascript" src="libs/m4.js" defer></script>
     <script type="text/javascript" src="libs/dat.gui.js" defer></script>
     <script type="text/javascript" src="libs/jquery-3.6.0.js" defer></script>
@@ -55,6 +55,20 @@
       <div class="wave-animation"></div>
       <div class="play-icon"></div>
     </button>
+
+    <div id="credits">
+      <div>
+        Source code on
+        <a
+          href="https://github.com/micheledinelli/where-i-wrote-this"
+          target="_blank"
+          >github</a
+        >
+      </div>
+      <div>
+        <a href="./docs/index.html" target="_blank">Documentation</a>
+      </div>
+    </div>
 
     <div id="loading">
       <div id="loading-bar"></div>
