--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         >
       </div>
       <div>
-        <a href="./docs/index.html" target="_blank">Documentation</a>
+        <a href="./doc/index.html" target="_blank">Documentation</a>
       </div>
     </div>
 
