--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <a
           href="https://github.com/micheledinelli/where-i-wrote-this"
           target="_blank"
-          >github</a
+          >Github</a
         >
       </div>
       <div>
